syntax = "proto3";

package agglayer.prover.v1;

service ProofGenerationService {
    rpc GenerateProof(ProofGenerationRequest) returns (ProofGenerationResponse);
}

message ProofGenerationRequest {
    bytes initial_state = 1;
    bytes batch_header = 2;
}

message ProofGenerationResponse {
    bytes proof = 1;
}

message ProofGenerationError {
    bytes error = 1;
}
